--- a/testBenchGenerator/TestbenchGenerator/View/NewTCView.xaml
+++ b/testBenchGenerator/TestbenchGenerator/View/NewTCView.xaml
@@ -61,7 +61,7 @@
             <ComboBox Grid.Row="1" Name="clkCB" Margin="50,5" ItemsSource="{Binding Clocks}" HorizontalAlignment="Stretch" VerticalAlignment="Center" SelectedItem="{Binding Clock}"/>
             <StackPanel Grid.Row="3" Orientation="Vertical" VerticalAlignment="Stretch" HorizontalAlignment="Center" Margin="2">
                 <StackPanel Orientation="Horizontal">
-                    <TextBox x:Name="inFile" Width="270" Height="25" IsReadOnly="True" Text="{Binding InputPath}" VerticalContentAlignment="Center" Margin="2,2,0,0"/>
+                    <TextBox x:Name="inFile" Background="#181735" Foreground="White" BorderThickness="1"  Width="270" Height="25" IsReadOnly="True" Text="{Binding InputPath}" VerticalContentAlignment="Center" Margin="2,2,0,0"/>
                     <Button x:Name="inB" Margin="10,2,10,0" Click="in_Click">
                         <ic:Material Kind="TextBoxPlusOutline"/>
                     </Button>
