--- a/testBenchGenerator/NewTCWindow/View/NewTCView.xaml
+++ b/testBenchGenerator/NewTCWindow/View/NewTCView.xaml
@@ -132,7 +132,7 @@
         
         <StackPanel Orientation="Horizontal" Grid.Column="2" Grid.Row="3" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,0,30,0">
             <StackPanel ToolTip="{Binding ProblemToolTip}" ToolTipService.IsEnabled="{Binding CanSaveN}">
-                <Button x:Name="add" Click="add_Click" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" Margin="0,0,10,0" IsEnabled="{Binding CanSave}">
+                <Button x:Name="add" Command="{Binding AddCommand}" HorizontalAlignment="Center" VerticalAlignment="Center" Foreground="White" Margin="0,0,10,0" IsEnabled="{Binding CanSave}">
                     <ic:Material Kind="PlaylistCheck"/>
                 </Button>
             </StackPanel>
