--- a/testBenchGenerator/TestbenchGenerator/View/GeneratorView.xaml
+++ b/testBenchGenerator/TestbenchGenerator/View/GeneratorView.xaml
@@ -26,7 +26,7 @@
                 <TextBlock Margin="10,0,0,0" HorizontalAlignment="Left" VerticalAlignment="Center" Text="Module under test source file"/>
                 <StackPanel Orientation="Horizontal" Margin="20">
                     <TextBox x:Name="dutFile" Width="300" Height="25" IsReadOnly="True" VerticalContentAlignment="Center"/>
-                    <Button x:Name="dut" Margin="10,0" Click="dut_Click">
+                    <Button x:Name="dut" Margin="10,0" Command="{Binding InitCommand}">
                         <ic:Material Kind="TextBoxPlusOutline"/>
                     </Button>
                 </StackPanel>
@@ -346,12 +346,12 @@
                             </ListView>
                             <StackPanel Orientation="Horizontal" Grid.Column="6" Grid.Row="2" VerticalAlignment="Center" HorizontalAlignment="Right" Margin="0,10,10,10" x:Name="btnspanel">
                                 <StackPanel ToolTip="{Binding ProblemAddToolTip}" ToolTipService.IsEnabled="{Binding CanAddN}">
-                                    <Button x:Name="add" Click="add_Click"  HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,10,0" IsEnabled="{Binding CanAdd}">
+                                    <Button x:Name="add" Command="{Binding AddCommand}"  HorizontalAlignment="Center" VerticalAlignment="Center" Margin="0,0,10,0" IsEnabled="{Binding CanAdd}">
                                         <ic:Material Kind="PlaylistPlus"/>
                                     </Button>
                                 </StackPanel>
                                 <StackPanel ToolTip="{Binding ProblemRemoveToolTip}" ToolTipService.IsEnabled="{Binding CanRemoveN}">
-                                    <Button x:Name="remove" Click="remove_Click"  HorizontalAlignment="Center" VerticalAlignment="Center" IsEnabled="{Binding CanRemove}">
+                                    <Button x:Name="remove" Command="{Binding RemoveCommand}" HorizontalAlignment="Center" VerticalAlignment="Center" IsEnabled="{Binding CanRemove}">
                                         <ic:Material Kind="PlaylistRemove"/>
                                     </Button>
                                 </StackPanel>
@@ -365,7 +365,7 @@
             <StackPanel Orientation="Horizontal" VerticalAlignment="Stretch" HorizontalAlignment="Right" x:Name="genpanel" Margin="0,10,0,10">
                 <TextBlock x:Name="infoBlock" VerticalAlignment="Center" HorizontalAlignment="Center" Grid.Row="3" Grid.Column="0"/>
                 <StackPanel ToolTip="{Binding ProblemGenerateToolTip}" ToolTipService.IsEnabled="{Binding CanGenerateN}">
-                    <Button x:Name="run" Grid.Row="3" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Content="Generate" IsEnabled="{Binding CanGenerate}" Click="run_Click"/>
+                    <Button x:Name="run" Grid.Row="3" Grid.Column="1" HorizontalAlignment="Right" VerticalAlignment="Center" Content="Generate" IsEnabled="{Binding CanGenerate}" Command="{Binding GenerateCommand}"/>
                 </StackPanel>
             </StackPanel>
 
